"resolve conflicts"